custom.css modified

--- a/قرة العيون في تبسيط لغة بايثون.ipynb
+++ b/قرة العيون في تبسيط لغة بايثون.ipynb
@@ -12,13 +12,81 @@
        "<style type=\"text/css\">@import url('https://www.fontstatic.com/f=yassin,amiri-quran,basim-marah,b-compset');\n",
        "\n",
        "\n",
+       "@font-face {\n",
+       "  font-family: Arslan;\n",
+       "  src: url(Arslan.ttf);\n",
+       "}\n",
+       "\n",
        ".title{\n",
        "direction: rtl;\n",
        "font-size:100px;\n",
        "padding-right: 15px;\n",
        "line-height:10px;\n",
        "font-family:basim-marah;\n",
+       "}\n",
        "\n",
+       "div.text_cell pre.CodeMirror-line {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "color:Blue;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       ".rendered_html {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html p {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h1{\n",
+       "direction: rtl;\n",
+       "font-size:200%;\n",
+       "text-align:center;\n",
+       "padding-right: 55px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h2{\n",
+       "direction: rtl;\n",
+       "font-size:171%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h3{\n",
+       "direction: rtl;\n",
+       "font-size:141%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul {\n",
+       "    list-style-type: none;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul li:before {\n",
+       "  content: '-';\n",
+       "  position: absolute;\n",
+       "  margin-right: -10px;\n",
        "}\n",
        "\n",
        ".arabic{\n",
@@ -89,6 +157,9 @@
        ".basic_table{\n",
        "    font-size:20px;\n",
        "    color:\"green\";\n",
+       "}\n",
+       "ol {\n",
+       "    margin-right:25px;\n",
        "}</style>"
       ],
       "text/plain": [
@@ -110,7 +181,9 @@
    "id": "f5c79764-242f-45ad-99da-0e3e0818e32e",
    "metadata": {},
    "source": [
-    "<img src=\"img/bookcover.PNG\">"
+    "<div style=\"border:2px solid #D3D3D3\">\n",
+    "<img src=\"img/bookcover.PNG\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -123,23 +196,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42e7c6f2-f7d8-4610-b3cb-8559e107ec62",
+   "id": "39b9b8b9",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "<br>\n",
-    "<center>\n",
-    "<h1 class=title>\n",
-    "المحتويات\n",
-    "</h1>\n",
-    "</center>\n",
-    "<hr class=horizontal>\n",
-    "</div>"
+    "# المحتويات"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "faa25485-2a29-49b4-8fb8-d0ee61494447",
+   "id": "198fde3d",
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
@@ -218,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5310a9a2-509c-43e7-9c56-27cd3b78a647",
+   "id": "862ec9a9",
    "metadata": {},
    "outputs": [],
    "source": []
