--- a/مقدمة الكتاب.ipynb
+++ b/مقدمة الكتاب.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "166c6159",
    "metadata": {},
    "outputs": [
@@ -12,13 +12,81 @@
        "<style type=\"text/css\">@import url('https://www.fontstatic.com/f=yassin,amiri-quran,basim-marah,b-compset');\n",
        "\n",
        "\n",
+       "@font-face {\n",
+       "  font-family: Arslan;\n",
+       "  src: url(Arslan.ttf);\n",
+       "}\n",
+       "\n",
        ".title{\n",
        "direction: rtl;\n",
        "font-size:100px;\n",
        "padding-right: 15px;\n",
        "line-height:10px;\n",
        "font-family:basim-marah;\n",
+       "}\n",
        "\n",
+       "div.text_cell pre.CodeMirror-line {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "color:Blue;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       ".rendered_html {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html p {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h1{\n",
+       "direction: rtl;\n",
+       "font-size:200%;\n",
+       "text-align:center;\n",
+       "padding-right: 55px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h2{\n",
+       "direction: rtl;\n",
+       "font-size:171%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h3{\n",
+       "direction: rtl;\n",
+       "font-size:141%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul {\n",
+       "    list-style-type: none;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul li:before {\n",
+       "  content: '-';\n",
+       "  position: absolute;\n",
+       "  margin-right: -10px;\n",
        "}\n",
        "\n",
        ".arabic{\n",
@@ -89,13 +157,29 @@
        ".basic_table{\n",
        "    font-size:20px;\n",
        "    color:\"green\";\n",
+       "}\n",
+       "ol {\n",
+       "    margin-right:25px;\n",
+       "}\n",
+       "\n",
+       ".grid-container {\n",
+       "  display: grid;\n",
+       "  grid-template-columns: 50% 50%;\n",
+       "  gap: 2px;\n",
+       "  padding: 2px;\n",
+       "}\n",
+       "\n",
+       ".grid-container > div {\n",
+       "  text-align: center;\n",
+       "  padding: 20px 0;\n",
+       "  font-size: 20px;\n",
        "}</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,28 +191,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "263f9ef1-9256-42ab-9aba-181655df011a",
+   "id": "976290d8",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "<h2 class=title style=\"padding-right:15px;\">\n",
-    "مقدمة الكتاب\n",
-    "</h2>\n",
-    "</div>"
+    "# مقدمة الكتاب"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "08863db9-d96c-4a0b-9685-d1bf3d8483f9",
+   "id": "436ff884",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
+    "\n",
     "الحمد لله الذي تتم بفضله الصالحات واصلي وأسلم على خير البشر نبينا محمد صلى الله عليه وسلم وعلى آله وصحبه الطيبين الطاهرين. اما بعد:\n",
-    "<br>\n",
+    "\n",
     "فلقد لاحظت خلال فترة تعلمي للغة بايثون افتقار المكتبة العربية الى كتاب مكتمل يشرح مبادي هذه اللغة بشكل منظم وبسيط. فعقدت العزم على تأليف هذه الكتاب وذلك لما رايته من الأهمية بمكان ان يتعلم القارئ العربي هذه اللغة والتي أصبحت اللغة البرمجية المحبوبة لدي الكثير من العلماء والباحثين والمهندسين. فمعظم جامعات العالم اليوم أصبحت تدرسها لطلابها لانها لغة برمجية سهلة و قوية في نفس الوقت ويمكن استخدامها في مجالات عدة. لذلك اردت ان يكون هذا الكتاب لبنة أولى للمساهمة في تعليم هذه اللغة وحافزا الى تدريسها في مدارسنا الحكومية في مراحل مبكرة كالمتوسطة والثانوية مثلا وذلك لان الأجيال الحالية لديها شغف غير مسبوق  على التعرف على كل ماهو جديد في عالم التقنية وخصوصا الكمبيوترية منها. فكل ما يحتاجة هذا الجيل هو استخدام طريقة سهلة وشيقة تعرفهم بهذه اللغة وتعزز شغفهم بالتقنية  فيصبحوا قادرين على تعلمها والاستفادة منها دون مشقة او عناء. وبما ان هذا العمل بشري المصدر فانه لا يصل الى درجة الكمال لذلك ارجو ممن سنحت له الفرصة لقراءة هذا الكتاب ان يساهم في تحسين محتواه بارسال ملاحظاته الى ايميل المؤلف ahmad.alsaadi@uj.edu.sa\n",
-    " الذي يعدكم على اخذها في عين الاعتبار متى ما سنحت الفرصة لاصدار طبعة جديدة لهذا الكتاب.\n",
+    " الذي يعدكم على اخذها في عين الاعتبار متى ما سنحت الفرصة لاصدار طبعة جديدة لهذا الكتاب.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a247649",
+   "metadata": {},
+   "source": [
+    "<div class=grid-container>\n",
+    "<div>\n",
+    "<a href=\"قرة%20العيون%20في%20تبسيط%20لغة%20بايثون.ipynb\">\n",
+    "محتويات الكتاب\n",
+    "</a>\n",
+    "</div>\n",
+    "<div>\n",
+    "<a href=\"الفصل%20الاول-%20نبذة%20عن%20بايثون.ipynb\" style=\"align:left\">\n",
+    "الفصل الاول: نبذة عن لغة بايثون\n",
+    "</a>\n",
+    "</div>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0db95fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
