how to read the book file updated

--- a/كيف تقرأ الكتاب.ipynb
+++ b/كيف تقرأ الكتاب.ipynb
@@ -206,8 +206,8 @@
    "id": "a71fbbd1",
    "metadata": {},
    "source": [
-    "1.  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية إضافة الشروح وكتابة الأكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. خلايا تنسيق نصوص Markdown تسمح بكتابة النصوص وإضافة الصور  وخلايا كود تمسح بكتابة وتنفيذ أكواد بايثون البرمجية داخالها.\n",
-    "2. تعلم لغات البرمجة يتطلب الكثير من التمرس على كتابة الأكواد واكتشاف الأخطاء ووجود بيئة تفاعلية مثل دفتر ملاحظات جوبتر سوف يمكين المتعلم من التعديل على الأكواد الموجودة داخل صفحات الكتاب واختبار نتائج التعديل عليها دون الحاجة الى إعادة كتابة الأكواد في محرر خارجي خاص كما جرت عليه العادة في كتب تعليم لغات البرمجة الورقية.  \n",
+    "1.  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية إضافة الشروح وكتابة الأكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. خلايا تنسيق نصوص Markdown تسمح بكتابة النصوص وإضافة الصور  وخلايا كود تمسح بكتابة وتنفيذ أكواد بايثون البرمجية داخلها.\n",
+    "2. تعلم لغات البرمجة يتطلب الكثير من التمرس على كتابة الأكواد واكتشاف الأخطاء ووجود بيئة تفاعلية مثل دفتر ملاحظات جوبتر سوف يمكن المتعلم من التعديل على الأكواد الموجودة داخل صفحات الكتاب واظهار نتائج التعديل الذي حصل للكود دون الحاجة الى إعادة كتابة الأكواد في محرر خارجي خاص كما جرت عليه العادة في كتب تعليم لغات البرمجة الورقية.  \n",
     "3. امكانية إضافة المتعلم لملاحظاته الخاصة داخل الكتاب بشكل مباشر."
    ]
   },
@@ -217,7 +217,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "لاستخدام دفتر ملاحظات جوبتر في فتح الكتاب والتفاعل معه يجب عليك اولا تنصيبه على الجهاز الذي تعمل عليه. بعد إتمام عملية التنصيب بنجاح وتشغيل دفتر ملاحظات جوبتر سوف يتم إنشاء خادم محلي على جهاز الكمبيوتر يمكن الدخول اليه من خلال متصفح الويب  والذي بدوره يمكنا من فتح ملفات الكتاب. "
+    "لاستخدام دفتر ملاحظات جوبتر في فتح الكتاب والتفاعل معه يجب عليك اولا تنصيبه على الجهاز الذي تعمل عليه. بعد إتمام عملية التنصيب بنجاح وتشغيل دفتر ملاحظات جوبتر سوف يتم إنشاء خادم محلي على جهاز الكمبيوتر يمكن الدخول اليه من خلال متصفح الويب  والذي بدوره يمكننا من فتح ملفات الكتاب. "
    ]
   },
   {
@@ -226,7 +226,31 @@
    "metadata": {},
    "source": [
     "## تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر \n",
-    "تعتبر طريقة فتح الكتاب والتفاعل معه من خلال تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر الذي نعمل عليه هي الطريقة المثلى. وتعتبر طريقة تصيب توزيعة ِِAnaconda هي الطريقة الأسهل للمبتدئين متى ما أرادوا تنصيب دفتر ملاحظات جوبتر على أجهزتهم الكمبيوترية.  فتوزيعة Anaconda تحتوي على مفسر بايثون ودفتر ملاحظات جوبتر والكثير من المكتبات العلمية المفيدة التي تصل بالمتعلم الى مستويات متقدمة في لغة بايثون. لذلك سوف نقتصر الشرح هنا على كيفية تنصيب هذه التوزيعة."
+    "تعتبر طريقة فتح الكتاب والتفاعل معه من خلال تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر الذي نعمل عليه هي الطريقة المثلى. وتعتبر طريقة تصيب توزيعة ِِAnaconda هي الطريقة الأسهل للمبتدئين متى ما أرادوا تنصيب دفتر ملاحظات جوبتر على أجهزتهم الكمبيوترية.  فتوزيعة Anaconda تحتوي على مفسر بايثون ودفتر ملاحظات جوبتر والكثير من المكتبات العلمية المفيدة التي تصل بالمتعلم الى مستويات متقدمة في لغة بايثون. لذلك سوف نقتصر الشرح  لكيفية تنصيب دفتر ملاحظات جوبتر على طريقتين شائعتين . اولاهما  يعتمد على التنصيب المباشر لدفتر ملاحظات جوبتر من خلال منصب المكتبات pip بعد تنصيب بايثون على جهاز الكمبيوتر. اما الطريقة الثانية فتعتمد على تنصيب توزيعة والتي تحتوي على دفتر ملاحظات جوبتر داخلها."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e20eae30",
+   "metadata": {},
+   "source": [
+    "### تنصيب دفتر ملاحظات باستخدام الاداة pip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aab8684c",
+   "metadata": {},
+   "source": [
+    "لتسهيل شرح خطوات هذا الطريقة قمنا بإنشاء فيديو توضيحي يمكن مشاهدته من خلال الضغط على الرابط التالي:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de3a4bbb",
+   "metadata": {},
+   "source": [
+    "[تنصيب دفتر ملاحظات جوبتر باستخدام الاداة pip](https://screenrec.com/share/f1LFXzG9ie)"
    ]
   },
   {
@@ -255,18 +279,19 @@
     "2. قم بتحميل التوزيعة المناسبة لنظام التشغيل الذي تعمل عليه على جهازك.\n",
     "3. قم بتشغيل الملف الذي قمت بتحميله في الخطوة 2 لبدء وإكمال عملية التنصيب على جهازك.\n",
     "4. بعد اكتمال عملية التنصيب قم بفتح Anaconda Navigator من خلال البحث في البرامج الموجودة على جهازك.\n",
-    "5. بعد تشغيل Anaconda Navigator سوف تظهر لك نافذه تحتوي على عدة برامج اختر منها دفتر ملاحظات جوبتر Jupyter Notebook وقم بالضغط عليه.\n",
-    "6. سوف يتم فتح دفتر ملاحظات جوبتر في متصفح الويب لديك ويعرض لك قائمة بالملفات والمجلدات الموجودة على جهازك.\n",
-    "7. قم بتحميل الكتاب من موقع  Github بالضغط على الرابط التالي:    \n",
+    "5. بعد تشغيل Anaconda Navigator سوف تظهر لك نافذه تحتوي على عدة برامج اختر منها دفتر ملاحظات جوبتر Jupyter Notebook وقم بالضغط عليه. \n",
+    "6. كما يمكنك اختصار  الخطوة 4 و 5  بالبحث مباشرة عن jupyter notebook في البرامج الموجودة على جهازك  والضغط عليه لفتحه.\n",
+    "7. سوف يتم فتح دفتر ملاحظات جوبتر في متصفح الويب لديك ويعرض لك قائمة بالملفات والمجلدات الموجودة على جهازك.\n",
+    "8. قم بتحميل الكتاب من موقع  Github بالضغط على الرابط التالي:    \n",
     "https://github.com/AhmadAlsaadi/Arabic-python-notebook/archive/refs/heads/master.zip\n",
-    "8. قم بفك الضغط عن مجلد الكتاب ووضعه على سطح المكتب أو في أي مكان آخر تختاره.\n",
-    "9. عد لدفتر ملاحظات جوبتر وابحث في قائمة المجلدات هناك عن مجلد الكتاب الذي قمت بفك الضغط عنه واضغط عليه للدخول  للمجلد.\n",
-    "10. عند الدخول لمجلد الكتاب من دفتر ملاحظات جوبتر قم بالضغط على الملف \"قرة العيون في تبسيط لغة بايثون\" لفتح الكتاب .\n",
-    "11. لإظهار الكتاب بالشكل الصحيح قم باختيار أول خلية في الكتاب والضغط على زر Run من قائمة الادوات في دفتر ملاحظات جوبتر كما هو موضح في الصورة أدناه:\n",
+    "9. قم بفك الضغط عن مجلد الكتاب ووضعه على سطح المكتب أو في أي مكان آخر تختاره.\n",
+    "10. عد لدفتر ملاحظات جوبتر وابحث في قائمة المجلدات هناك عن مجلد الكتاب الذي قمت بفك الضغط عنه واضغط عليه للدخول  للمجلد.\n",
+    "11. عند الدخول لمجلد الكتاب من دفتر ملاحظات جوبتر قم بالضغط على الملف \"قرة العيون في تبسيط لغة بايثون\" لفتح الكتاب .\n",
+    "12. لإظهار الكتاب بالشكل الصحيح قم باختيار أول خلية في الكتاب والضغط على زر Run من قائمة الادوات في دفتر ملاحظات جوبتر كما هو موضح في الصورة أدناه:\n",
     "\n",
     "<img src=\"img/cmd4.png\">\n",
     "\n",
-    "12. للتعرف على كيفية التفاعل مع الكتاب قم بفتح وقراءة ملف الدليل الارشادي لدفتر ملاحظات جوبتر الذي يأتي مع الكتاب."
+    "13. للتعرف على كيفية التفاعل مع الكتاب قم بفتح وقراءة ملف الدليل الارشادي لدفتر ملاحظات جوبتر الذي يأتي مع الكتاب."
    ]
   },
   {
