--- a/الفصل الخامس-حلقات التكرار.ipynb
+++ b/الفصل الخامس-حلقات التكرار.ipynb
@@ -12,13 +12,81 @@
        "<style type=\"text/css\">@import url('https://www.fontstatic.com/f=yassin,amiri-quran,basim-marah,b-compset');\n",
        "\n",
        "\n",
+       "@font-face {\n",
+       "  font-family: Arslan;\n",
+       "  src: url(Arslan.ttf);\n",
+       "}\n",
+       "\n",
        ".title{\n",
        "direction: rtl;\n",
        "font-size:100px;\n",
        "padding-right: 15px;\n",
        "line-height:10px;\n",
        "font-family:basim-marah;\n",
+       "}\n",
        "\n",
+       "div.text_cell pre.CodeMirror-line {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "color:Blue;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       ".rendered_html {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html p {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h1{\n",
+       "direction: rtl;\n",
+       "font-size:200%;\n",
+       "text-align:center;\n",
+       "padding-right: 55px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h2{\n",
+       "direction: rtl;\n",
+       "font-size:171%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h3{\n",
+       "direction: rtl;\n",
+       "font-size:141%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul {\n",
+       "    list-style-type: none;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul li:before {\n",
+       "  content: '-';\n",
+       "  position: absolute;\n",
+       "  margin-right: -10px;\n",
        "}\n",
        "\n",
        ".arabic{\n",
@@ -89,6 +157,22 @@
        ".basic_table{\n",
        "    font-size:20px;\n",
        "    color:\"green\";\n",
+       "}\n",
+       "ol {\n",
+       "    margin-right:25px;\n",
+       "}\n",
+       "\n",
+       ".grid-container {\n",
+       "  display: grid;\n",
+       "  grid-template-columns: 50% 50%;\n",
+       "  gap: 2px;\n",
+       "  padding: 2px;\n",
+       "}\n",
+       "\n",
+       ".grid-container > div {\n",
+       "  text-align: center;\n",
+       "  padding: 20px 0;\n",
+       "  font-size: 20px;\n",
        "}</style>"
       ],
       "text/plain": [
@@ -640,6 +724,338 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38dd0a7f",
+   "metadata": {},
+   "source": [
+    "كما يمكن عمل حلقة تكرار داخل حلقة تكرار بحيث يقوم البرنامج بتكرار حلقة التكرار الداخلية عددا من المرات مساويا لعناصر حلقة التكرار الخارجية كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2655add0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 * 1 = 1\n",
+      "1 * 2 = 2\n",
+      "1 * 3 = 3\n",
+      "2 * 1 = 2\n",
+      "2 * 2 = 4\n",
+      "2 * 3 = 6\n",
+      "3 * 1 = 3\n",
+      "3 * 2 = 6\n",
+      "3 * 3 = 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in range(1,4):\n",
+    "    for b in range(1,4):\n",
+    "        print(a,\"*\",b,\"=\",a*b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd61d230",
+   "metadata": {},
+   "source": [
+    "في المثال السابق يأخذ المتغير a لحلقة التكرار الخارجية القيمة 1 من الدالة range ومن ثم يقوم بالدخول في حلقة التكرار الداخلية الممثلة بالمتغير b حيث تتكرر اربع مرات ثم يعود البرنامج الى حلقة التكرار الخارجية ليغير قيمة a الى القيمة 2 ثم يدخل مرة اخرى في حلقة التكرار الداخلية حتى تنتهي الحلقة الداخلية ويعود مره اخرى للحلقة الخارجية وهكذا يكمل البرنامج تنفيذ الكود البرمحي حتى تنتهي عناصر القيم الموجودة في الدالة range  للحلقة الخارجية. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0327a49",
+   "metadata": {},
+   "source": [
+    "### ايقاف حلقة التكرار قبل اكتمالها"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04deb54a",
+   "metadata": {},
+   "source": [
+    "ان توقف حلقة التكرار الافتراضي هو الانتهاء من كافة العناصر الموجودة في قائمة او عدد الحروف الموجودة في نص. لكن في بعض الاحيان يجد المبرمج ان اكمال حلقة التكرار  لا فائدة منه (سوف نأخذ امثلة لاحقا على متى يكون اكمال حلقة التكرار لا فائدة منه ) فيعمد الي ايقاف حلقة التكرار  باستخدام عبارة التوقف break.  ولتعرف على كيفية استخدام  عبارة التوقف break سوف نفرض اننا نود ان نكتب برنامجا يقوم بطباعة كل الفواكة الموجودة في قائمة ويتوقف البرنامج عن طباعة أسماء الفواكة ويخرج من حلقة التكرار بمجرد الوصول الى فاكهة الموز كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "811d5a14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"orange\",\"banana\", \"cherry\"]\n",
+    "for x in fruits:\n",
+    "    if x == \"banana\":\n",
+    "        break\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2204132",
+   "metadata": {},
+   "source": [
+    "في المثال السابق كان لدينا قائمة باربعة فواكهة قمنا بعمل حلقة تكرار بعدد عناصرها وكان الكود البرمجي المطلوب تكراره هو التأكد من أن اسم الفاكهة المراد طباعتها ليس الموز لأنه بمجرد تحقق هذا الشرط يقوم البرنامج بتنفيذ العبارة break والتي تقوم باجبار البرنامج بالخروج من حلقة التكرار. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ec3de5b",
+   "metadata": {},
+   "source": [
+    "إن من المناسب ان نذكر هنا ان حلقات التكرار يمكن ان تستخدم العبارة else في تركيبها اللغوي وذلك للقيام بمهام عند الانتهاء من حلقة التكرار شريطة أن حلقة التكرار لم يتم إنهائها بواسطة العبارة break. كم في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6ad76e73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "loop is completed successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,4):\n",
+    "    print(i**2)\n",
+    "else:\n",
+    "    print(\"loop is completed successfully\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c8e3f9e",
+   "metadata": {},
+   "source": [
+    "أما اذا تم إنهاء حلقة التكرار من خلال العبارة break فإن الأسطر البرمجية التي تقع داخل العبارة else لا يتم تنفيذها كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "12439764",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"orange\",\"banana\", \"cherry\"]\n",
+    "for x in fruits:\n",
+    "    if x == \"banana\":\n",
+    "        break\n",
+    "    print(x)\n",
+    "else:\n",
+    "    print(\"loop is completed successfully\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da81a335",
+   "metadata": {},
+   "source": [
+    "لنضرب الآن مثالا  آخر يوضح  الحاجة الى استخدام  break وعدم الرغبة في اكمال  حلقة التكرار. لنفرض اننا نريد كتابة برنامج يقوم بتحديد الأعداد الأولية للأرقام من 2 الى 10. الأعداد الأولية هي الأرقام التي تقبل القسمة على نفسها وعلى العدد واحد فقط. للقيام بهذه المهمة نحتاج الى كتابة الكود التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "170690da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is a prime number\n",
+      "3 is a prime number\n",
+      "4 equals 2 * 2\n",
+      "5 is a prime number\n",
+      "6 equals 2 * 3\n",
+      "7 is a prime number\n",
+      "8 equals 2 * 4\n",
+      "9 equals 3 * 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(2, 10):\n",
+    "    for x in range(2, n):\n",
+    "        if n % x == 0:\n",
+    "            print(n, 'equals', x, '*', n//x)\n",
+    "            break\n",
+    "    else:\n",
+    "        print(n, 'is a prime number')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e86ffa1",
+   "metadata": {},
+   "source": [
+    "البرنامج السابق يستخدم حلقتي تكرار واحدة داخلية والاخرى خارجية. الحلقة الخارجية تبدأ باستخدام القيمة 2 للمتغير n من الدالة  range ومن ثم تدخل في حلقة تكرار داخلية لتقوم بتحديد نوع العدد الموجود في المتغير n والذي هنا اصبح يحمل القيمة 2 للتأكد ما اذا كان العدد 2 عدد أولي او لا. طريقة التحديد تعتمد على تكوين حلقة تكرار من خلال الدالة range التي تبتدأ بالقيمة 2 وتنتهي بقيمة اقل من القيمة الموجودة في المتغير n. فعندما تكون قيمة n هي 2 فان الحلقة الداخلية سوف تتكرر صفر من المرات كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b01ee5ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=2\n",
+    "for x in range(2,n):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ae1b23c",
+   "metadata": {},
+   "source": [
+    "لاحظ ان الكود السابق لايطبع اي قيمة للمتغير x. لان عدد مرات التكرار هنا صفر."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc9dabcb",
+   "metadata": {},
+   "source": [
+    "لذلك سوف تعتبر حلقة التكرار الداخلية انتهت بشكل كامل وسوف ينفذ الكود البرمجي الذي يقع داخل العبارة else والذي يفيد بأن قيمة العدد 2 هي عدد اولي. ويعود الكود البرمجي الى الحلقة الخارجية ليضع القيمة 3 داخل المتغير n ويكوّن حلقة تكرار داخلية جديد من الدالة range تبتدأ بالقيمة 2 وتنتهي بقيمة أقل من 3. فيتكون لدينا حلقة تكرار واحدة كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f44038b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=3\n",
+    "for x in range(2,n):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ebb4de9",
+   "metadata": {},
+   "source": [
+    "يقوم الكود البرمجي داخل الحلقة الداخلية بالتأكد ما اذا كانت القيمة 3 للمتغير n تقبل القسمة بدون باقي على قيمة x والتي هي هنا 2  فيجد أن شرط التحقق لا يتحقق فيخرج من الحلقة الداخلية بعد اكتمالها لينفد السطر البرمجي في العبارة else كما شرحنا سابقاً.  تتكرر العملية بالذهاب الى الحلقة الخارجية وإعطاء n القيمة 4 ويتم تكوين حلقة تكرارية جديد من خلال الدالة range تبدأ من 2  وتنتهي  بـقيمة أقل من 4 فيتكون لدينا حلقتي تكرار كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "095039b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=4\n",
+    "for x in range(2,n):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0737762",
+   "metadata": {},
+   "source": [
+    "يقوم الكود البرمجي داخل الحلقة الداخلية بالتأكد ما اذا كانت القيمة 4 للمتغير n تقبل القسمة بدون باقي على قيمة x والتي تبدأ اولا بـ 2 فيجد أن شرط التحقق يتحقق فيبدأ تنفيذ السطر البرمجي المحكوم بتحقق الشرط وهو طباعة حاصل ضرب القيمة x بقيمة حاصل قسمة n بالقيمة x ثم يتم استدعاء العبارة break للخروج من حلقة التكرار الداخلية لأنه لا يوجد داعي للتحقق من كون قيمة x الثانية هي قاسم للعدد 4 فيكفي وجود قيمة واحدة غير العدد نفسه لأثبات أن العدد غير أولي. سوف يعود الكود البرمجي بعدها الى الحلقة الخارجية دون تنفيذ السطر البرمجي للعبارة else لأن حلقة التكرار تم انهاؤها قبل أن تكتمل. تتكرر العملية بالذهاب الى الحلقة الخارجية  على هذا المنوال حتى تنتهي عناصر الحلقة الخارجية.  كلما زادت قيمة n كلما زاد عدد مرات التكرار التي يتخطاها الكود البرمجي بالعبارة break فيصبح تنفيذ الكود أسرع مقارنة بكود برمجي يقوم بنفس المهمة دون استخدام العبارة break. لإثبات هذه المعلومة لنقم بكتابة الكود البرمجي السابق بدون استخدام عبارة break  بحيث يتطلب الخروج من الحلقة الداخلية إكمال جميع الحلقات التكرارية كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20ef00f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "prime=[]\n",
+    "non_prime=[]\n",
+    "for n in range(2, 10000):\n",
+    "    divisor=0\n",
+    "    for x in range(2, n):\n",
+    "        if n % x == 0:\n",
+    "            divisor+=1\n",
+    "    if divisor:\n",
+    "        non_prime.append(n)\n",
+    "    else:\n",
+    "        prime.append(n)\n",
+    "print(\"prime=\",len(prime))\n",
+    "print(\"non-prime=\",len(non_prime))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e276ad52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "prime=[]\n",
+    "non_prime=[]\n",
+    "for n in range(2, 10000):\n",
+    "    for x in range(2, n):\n",
+    "        if n % x == 0:\n",
+    "            non_prime.append(n)\n",
+    "            break\n",
+    "    else:\n",
+    "        prime.append(n)\n",
+    "print(\"prime=\",len(prime))\n",
+    "print(\"non-prime=\",len(non_prime))"
+   ]
   },
   {
    "cell_type": "markdown",
