updating chapter 5 while loop

--- a/الفصل الخامس-حلقات التكرار.ipynb
+++ b/الفصل الخامس-حلقات التكرار.ipynb
@@ -1059,6 +1059,129 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e528c7c",
+   "metadata": {},
+   "source": [
+    "### استخدام عبارة المواصلة continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dc21a80",
+   "metadata": {},
+   "source": [
+    "تسخدم العبارة continue داخل حلقات التكرار عندما يرغب المبرمج في عدم تنفيذ الاسطر البرمجية التي تلي العبارة continue  بحيث يذهب البرنامج الى تنفيذ الحلقة التكرارية التالية كما هو موضح في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a6a3ca9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "for x in fruits:\n",
+    "    if x == \"banana\":\n",
+    "        continue\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d31345bf",
+   "metadata": {},
+   "source": [
+    "فحلقة التكرار السابقة تحتوي على شرط عند تحققه فإن البرنامج يتخطى باقي الاسطر البرمجية التي تقع داخل الحلقة التكرارية والتي هي هنا امر الطباعة ويذهب الى تنفيذ الحلقة التكرارية التالية. فعند تحقق الشرط بأن تكون قيمة x تساوي  banana فإن البرنامج تخطى امر طباعة  banana ويذهب للحلقة التي بعدها تضع قيمة x  بالقيمة  cherry وعند عدم تحقق الشرط فان امر طباعة  cherry  يتحقق."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41745e4d",
+   "metadata": {},
+   "source": [
+    "### استخدام حلقة التكرار لإنشاء القوائم"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06330fd6",
+   "metadata": {},
+   "source": [
+    "هناك طريقتان شائعتان لإنشاء القوائم بواسطة حلقات التكرار:\n",
+    "\n",
+    "**الطريقة المطولة**: تعتمد على إنشاء قائمة فارغة ومن ثم استخدام الامر append لاضافة العناصر لهذه القائمة كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f947301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'banana', 'mango']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
+    "newlist = []\n",
+    "\n",
+    "for x in fruits:\n",
+    "    if \"a\" in x:\n",
+    "        newlist.append(x)\n",
+    "newlist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7963221a",
+   "metadata": {},
+   "source": [
+    "**الطريقة المختصرة**: تعتبر هذه الطريقة هي الاكثر شيوعاً والمفضلة لدى المبرمجين لأنها تسمح بإنشاء القائمة من خلال كتابة سطر برمجي واحد فقط. فلو أردنا ان نكتب المثال السابق بالطريقة المختصرة لأصبح الكود بالشكل التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8cde44c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'banana', 'mango']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
+    "newlist = [x for x in fruits if \"a\" in x]\n",
+    "newlist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0bad43f8-b5d4-4ac2-8597-98547113fe85",
    "metadata": {},
    "source": [
@@ -1076,7 +1199,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "الحلقة التكرارية while تستخدم عندما يكون عدد مرات التكرار التي يريد المبرمج القيام بها غير معروفه مسبقاً. لذلك تستخدم هذه الحلقة التكرارية عندما نريد أن نقوم بعمليات تكرار غير منتهية أو عندما لا يتم معرفة إمكانية الخروج من الحلقة التكرارية إلا بعد اجراء بعض العمليات داخل الحلقة التكرارية. ويكون التركيب اللغوي لهذه الحلقة مشابها لحد ما لحلقة for كما في المثال التالي:\n",
+    "الحلقة التكرارية while تستخدم عندما يكون عدد مرات التكرار التي يريد المبرمج القيام بها غير معروف مسبقاً. لذلك تستخدم هذه الحلقة التكرارية عندما نريد أن نقوم بعمليات تكرار غير منتهية أو عندما لا يتم معرفة إمكانية الخروج من الحلقة التكرارية إلا بعد اجراء بعض العمليات داخل الحلقة التكرارية. ويكون التركيب اللغوي لهذه الحلقة مشابها لحد ما لحلقة for كما في المثال التالي:\n",
     "</div>"
    ]
   },
@@ -1222,12 +1345,192 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d694580",
+   "cell_type": "markdown",
+   "id": "b3213672",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "كما يمكن استخدام العبارة break مع حلقة التكرار while كما فعلنا من قبل مع حلقة التكرار for كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b6aa9839",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 6:\n",
+    "    print(i)\n",
+    "    if i == 3:\n",
+    "        break\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "727a97c5",
+   "metadata": {},
+   "source": [
+    "واستخدام عبارة  else سوف يكون بنفس الطريقة التي تعلمناها مع حلقة التكرار كما في المثالين التاليين:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "435fbe8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 6:\n",
+    "    print(i)\n",
+    "    if i == 3:\n",
+    "        break\n",
+    "    i += 1\n",
+    "else:\n",
+    "    print(\"I completed the loop successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8c7972ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "I completed the loop successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 6:\n",
+    "    print(i)\n",
+    "    if i == 13:\n",
+    "        break\n",
+    "    i += 1\n",
+    "else:\n",
+    "    print(\"I completed the loop successfully\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daccb2e7",
+   "metadata": {},
+   "source": [
+    "وكذلك استخدام العبارة continue يمكن استخدامها مع حلقة تكرار  while بنفس الطريقة التي تعلمناها مع حلقة التكرار  for كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f40d62b2",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 6: \n",
+    "    i += 1    \n",
+    "    if i == 3:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62a4580e",
+   "metadata": {},
+   "source": [
+    "### استخدام دالة ادخال البيانات ()input مع حلقة التكرار while"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9488a199",
+   "metadata": {},
+   "source": [
+    "يكثر استخدام  حلقة التكرار while مع دالة الادخال ()input والتي تطلب من مستخدم البرنامج ادخال البيانات التي يحتاجها البرنامج لاتمام العمليات المطلوبة من البرنامج. فعلى سبيل المثال يمكن كتابة برنامج يطلب من المستخدم ادخال قيمة نصية بحيث يقوم البرنامج بطباعة عدد أحرف القيمة النصية التي ادخلها المستخدم. لتمكين المستخدم من ادخال قيم نصية مختلفة في كل مرة نستخدم حلقة التكرار while بحيث نطلب من المستخدم ادخال قيمة اخرى لحساب عدد حروفها وطباعتها على الشاشة. سوف تستمر هذا العملية الى ما لا نهاية لذلك يفضل ان يعمل شرط داخل حلقة التكرار while بحيث في حال تحققه يقوم بالخروج من الحلقة التكرارية كما هو موضح في البرنامج التالي: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "39ad8e95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a text otherwise write q to quit: hello\n",
+      "You entered  5  letters\n",
+      "please enter a text otherwise write q to quit: my name is a ahmad\n",
+      "You entered  18  letters\n",
+      "please enter a text otherwise write q to quit: q\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "while True:\n",
+    "    txt=input(\"please enter a text otherwise write q to quit: \")\n",
+    "    if txt==\"q\":\n",
+    "        break\n",
+    "    else: print(\"You entered \",len(txt),\" letters\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "420a8300",
+   "metadata": {},
+   "source": [
+    "للاستزادة حول استخدام الدالة ()input يمكنك  قراءة الفصل السابع من هذا الكتاب."
+   ]
   }
  ],
  "metadata": {
