--- a/قرة العيون في تبسيط لغة بايثون.ipynb
+++ b/قرة العيون في تبسيط لغة بايثون.ipynb
@@ -160,6 +160,19 @@
        "}\n",
        "ol {\n",
        "    margin-right:25px;\n",
+       "}\n",
+       "\n",
+       ".grid-container {\n",
+       "  display: grid;\n",
+       "  grid-template-columns: 50% 50%;\n",
+       "  gap: 2px;\n",
+       "  padding: 2px;\n",
+       "}\n",
+       "\n",
+       ".grid-container > div {\n",
+       "  text-align: center;\n",
+       "  padding: 20px 0;\n",
+       "  font-size: 20px;\n",
        "}</style>"
       ],
       "text/plain": [
