--- a/الفصل السادس-كتابة الدوال.ipynb
+++ b/الفصل السادس-كتابة الدوال.ipynb
@@ -191,19 +191,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35e84e09-27db-4382-91db-fa277c9da0c3",
+   "id": "72a10d25",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "<hr class=horizontal>\n",
-    "<center>\n",
-    "<a id=\"chapter6\"></a>\n",
-    "<h1 class=title>\n",
-    "الفصل السادس : كتابة الدوال\n",
-    "</h1>\n",
-    "</center>\n",
-    "<hr class=horizontal>\n",
-    "</div>"
+    "# الفصل السادس : كتابة الدوال\n",
+    "<hr class=horizontal>"
    ]
   },
   {
@@ -219,23 +211,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76f14c10-da24-4250-8ca8-c87f4e8ed642",
+   "id": "9f6b3e4d",
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
     "\n",
-    "<h2 class=title>\n",
-    "أهداف الفصل\n",
-    "</h2>\n",
+    "## أهداف الفصل\n",
     "عند إتمام هذا الفصل يجب أن يكون لديك إلمام بالآتي: \n",
-    "\n",
     "<ol>\n",
     "<li> \n",
     "كيفية كتابة دالة وطريقة استدعائها. </li>\n",
     "<li>\n",
     "التعرف على أنواع مدخلات الدوال وكيفية استخدامها. </li>\n",
+    "<li>التعرف على الدوال الداخلية وخواصها</li>\n",
     "<li>\n",
     "التعرف على مخرجات الدوال.</li> \n",
+    "<li>تعلم الطريقة المختصرة لكتابة الدوال عن طريق استخدام lambda</li>\n",
     "    <li>\n",
     "    التعرف على الطريقة الصحيحة لكتابة تعليقات إرشادية تشرح كيفية استخدام الدوال.\n",
     "    </li>\n",
@@ -303,15 +294,33 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "لاحظ أيضاًً أن الكود البرمجي داخل الدالة يكتب بعد ترك مسافة على الأقل بمقدار حرف واحد والمتعارف عليه بين مبرمجي بايثون هو ترك مسافة بمقدار أربعة أحرف. كما يجب التذكير بأن جميع أسطر الكود البرمجي داخل الدالة يجب أن تترك نفس المسافة وإلاّ سوف يعطي مفسر بايثون إشعارا بوجود خطأ.<br> لا يتم تنفيذ الكود داخل الدالة إلاّ بعد استدعائها وذلك بكتابة اسم الدالة متبوعا بقوسين بداخلهما مدخلات الدالة إن كان هناك مدخلات للدالة أما إذا لم يكن هناك مدخلات للدالة فيكتفى بكتابة قوسين فارغين كما في المثال التالي:\n",
+    "لاحظ أيضاًً أن الكود البرمجي داخل الدالة يكتب بعد ترك مسافة على الأقل بمقدار حرف واحد والمتعارف عليه بين مبرمجي بايثون هو ترك مسافة بمقدار أربعة أحرف. كما يجب التذكير بأن جميع أسطر الكود البرمجي داخل الدالة يجب أن تترك نفس المسافة وإلاّ سوف يعطي مفسر بايثون إشعارا بوجود خطأ.\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d38d0225",
+   "metadata": {},
+   "source": [
+    "## استدعاء الدوال"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67e77738",
+   "metadata": {},
+   "source": [
+    "لا يتم تنفيذ الكود داخل الدالة إلاّ بعد استدعائها وذلك بكتابة اسم الدالة متبوعا بقوسين بداخلهما مدخلات الدالة إن كان هناك مدخلات للدالة أما إذا لم يكن هناك مدخلات للدالة فيكتفى بكتابة قوسين فارغين كما في المثال التالي"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "8ea51808-bee7-43ac-9338-10ba41e3c71c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -362,9 +371,23 @@
    "id": "155fa8ae",
    "metadata": {},
    "source": [
-    "لذلك يمكن كتابة تعريف الدالة في أي مكان من البرنامج شريطة أن لا يسبق استدعاءها تعريفها عند كتابة البرنامج. لاحظ أيضاً أن في الأمثلة السابقة كتبنا قوسي الدالة فارغين لأن الدالة لاتتطلب أي معلومات إضافية لتنفيذ الكود البرمجي داخلها.    \n",
-    "\n",
-    "لنفرض الآن أننا نريد كتابة دالة أكثر ذكاءً بحيث تقوم بالقاء التحية على أي شخص ندخل اسمه للدالة. للقيام بهذه المهمة يمكن كتابة الدالة بالطريقة التالية:"
+    "لذلك يمكن كتابة تعريف الدالة في أي مكان من البرنامج شريطة أن لا يسبق استدعاءها تعريفها عند كتابة البرنامج. لاحظ أيضاً أن في الأمثلة السابقة كتبنا قوسي الدالة فارغين لأن الدالة لاتتطلب أي معلومات إضافية لتنفيذ الكود البرمجي داخلها.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6533f929",
+   "metadata": {},
+   "source": [
+    "## مدخلات الدوال"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3098fd33",
+   "metadata": {},
+   "source": [
+    "لنفرض الآن أننا نريد كتابة دالة أكثر ذكاءً بحيث تقوم بالقاء التحية على أي شخص ندخل اسمه للدالة. للقيام بهذه المهمة يمكن كتابة الدالة بالطريقة التالية"
    ]
   },
   {
@@ -444,11 +467,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "013d5cbd",
+   "metadata": {},
+   "source": [
+    "### أنواع مدخلات الدوال"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f3546a9f-bf84-4403-b2d8-b95e514118ff",
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "يجب الإشارة الى أن مدخلات الدالة تنقسم الى قسمين. القسم الأول يسمى مدخلات الزامية بحيث أنه متى ما تم كتابتها داخل قوسي الدالة عند تعريفها فإن الدالة لا يمكن استدعاءها إلاّ بعد تزويدها بهذه المدخلات كما في المثال التالي: </div>"
+    "يجب الإشارة الى أن مدخلات الدالة تنقسم الى ثلاثة أقسام. القسم الأول يسمى مدخلات الزامية بحيث أنه متى ما تم كتابتها داخل قوسي الدالة عند تعريفها فإن الدالة لا يمكن استدعاءها إلاّ بعد تزويدها بهذه المدخلات كما في المثال التالي: </div>"
    ]
   },
   {
@@ -657,7 +688,7 @@
    "id": "f906c5af",
    "metadata": {},
    "source": [
-    "ما ذا لو أننا أردنا كتابة دالة مرنة بحيث نعطي المستخدم حريته في اختيار عدد المدخلات التي يود معالجتها كأن تكون لدينا دالة تقوم بحساب حاصل ضرب القيم التي ندخلها لها بحيث يمكن أن يكون عدد القيم المدخلة 2 أو 3 أو 4 أو أي عدد من القيم الذي يختاره المستخدم فماذا عسانا أن نعمل. "
+    "القسم الثالث من مدخلات الدالة يسمى المدخلات المرنة. ما ذا لو أننا أردنا كتابة دالة بحيث نعطي المستخدم حريته في اختيار عدد المدخلات التي يود معالجتها كأن تكون لدينا دالة تقوم بحساب حاصل ضرب القيم التي ندخلها لها بحيث يمكن أن يكون عدد القيم المدخلة 2 أو 3 أو 4 أو أي عدد من القيم الذي يختاره المستخدم فماذا عسانا أن نعمل. "
    ]
   },
   {
@@ -665,7 +696,7 @@
    "id": "cc31abff",
    "metadata": {},
    "source": [
-    "لم يغفل مبرمجوا لغة بايثون عن هذه الخاصية ووضعوا تركيباً يمكن مفسر بايثون من  تعريف دالة ٍ مرنه المدخلات الإلزامية باستخدام علامة النجمة قبل اسم المدخل كما هو موضح في المثال التالي:"
+    "لم يغفل مبرمجوا لغة بايثون عن هذه الخاصية ووضعوا تركيباً يمكّن مفسر بايثون من  تعريف دالة ٍ مرنة المدخلات الإلزامية باستخدام علامة النجمة قبل اسم المدخل كما هو موضح في المثال التالي:"
    ]
   },
   {
@@ -851,6 +882,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9419803a",
+   "metadata": {},
+   "source": [
+    "## مخرجات الدوال"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c495fc26-e7e2-4f38-850a-76f73dbd45bf",
    "metadata": {},
    "source": [
@@ -889,7 +928,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "في حقيقة الأمر إن الدالة دائماً تقوم بإرجاع محصلتها حتى لو لم نكتب ما نريد إرجاعه بعد الأمر return. فإذا لم نستخدم الأمر  return فإن الدالة تقوم بإرجاع قيمة افتراضية هي None وتعني أنه لم يتم إرجاع أي شيئ. كما في المثال التالي:\n",
+    "في حقيقة الأمر إن الدالة دائماً تقوم بإرجاع محصلتها حتى لو لم نكتب العبارة return. فإذا لم نستخدم العبارة return فإن الدالة تقوم بإرجاع قيمة افتراضية هي None وتعني أنه لم يتم إرجاع أي شيئ. كما في المثال التالي:\n",
     "</div>"
    ]
   },
@@ -913,16 +952,40 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "    لاحظ أن الدالة السابقة قامت بجمع المدخلين وإسناد النتيجة الى المتغير z. وبما أننا لم نستخدم الأمر return لإرجاع قيمة المتغير z فان الدالة قامت بإرجاع القيمة الافتراضية None. هذي النقطة تقودنا الى ما يسمى بمحال المتغيرات داخل الدوال. فالمتغير z في الدالة السابقة سوف يمسح من الذاكرة بمجرد الإنتهاء من استدعاء الدالة لذلك تسمى هذه المتغيرات بالمتغيرات المحلية أما المتغيرات التى تقع خارج الدوال فتسمى متغيرات عالمية (global variables) بحيث تحتفظ بقيمتها في أي مكان من البرنامج حتى لو كانت في داخل الدوال كما في المثال التالي:\n",
+    "    لاحظ أن الدالة السابقة قامت بجمع المدخلين وإسناد النتيجة الى المتغير z. وبما أننا لم نستخدم الأمر return لإرجاع قيمة المتغير z فان الدالة قامت بإرجاع القيمة الافتراضية None. هذي النقطة تقودنا الى ما يسمى بمحال المتغيرات داخل الدوال.\n",
     "</div>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c85f2630",
+   "metadata": {},
+   "source": [
+    "## مجال المتغيرات داخل الدوال"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8536e9eb",
+   "metadata": {},
+   "source": [
+    "المتغير z في الدالة السابقة تم مسحه من الذاكرة بمجرد أن تم الإنتهاء من تنفيذ الدالة لذلك تسمى هذه المتغيرات بالمتغيرات المحلية أما المتغيرات التى تقع خارج الدوال فتسمى متغيرات عالمية (global variables) بحيث تحتفظ بقيمتها في أي مكان من البرنامج حتى لو كانت في داخل الدوال كما في المثال التالي"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4d0376dc-710a-4beb-a29b-977d6c760bf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "x=5\n",
     "def addition():\n",
@@ -980,6 +1043,14 @@
     "\n",
     "change_x()\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ec2790d",
+   "metadata": {},
+   "source": [
+    "## الدوال الداخلية"
    ]
   },
   {
@@ -1107,6 +1178,182 @@
     "        print(\"I am inside inner3\")\n",
     "outer3()\n",
     "inner3()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d658718",
+   "metadata": {},
+   "source": [
+    "كما يجب الإشارة الى أنه بالإمكان ارجاع الدالة الداخلية كناتج للدالة الخارجية باستخدام العبارة return كما هو موضح في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7c6da8f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am inside inner3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def outer3():\n",
+    "    global inner3\n",
+    "    def inner3():\n",
+    "        print(\"I am inside inner3\")\n",
+    "    return inner3\n",
+    "inner3=outer3()\n",
+    "inner3()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3abe3fe6",
+   "metadata": {},
+   "source": [
+    "ويمكن كتابة المثال السابق بطريقة اخرى كما في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dd5086af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am inside inner3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def outer3():\n",
+    "    global inner3\n",
+    "    def inner3():\n",
+    "        print(\"I am inside inner3\")\n",
+    "    return inner3\n",
+    "outer3()()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20baf3d7",
+   "metadata": {},
+   "source": [
+    "## الطريقة المختصرة لكتابة الدوال"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ed96d73",
+   "metadata": {},
+   "source": [
+    "بالإضافة الى الطريقة التلقيدية التي تناولنهاها بشيئ من التفصيل هناك طريقة مختصرة لكتابة الدوال باستخدام العبارة lambda كما هو موضح في المثال التالي: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d59a4af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=lambda x: x**2\n",
+    "f(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59591312",
+   "metadata": {},
+   "source": [
+    "فالتركيب اللغوي لكتابة الدوال المختصرة يبدأ بكتابة العبارة lambda متبوعاً بالمدخلات التي سوف تدخل في العمليات التي سوف تجريها الدالة.  تنتهي المدخلات بنقطتين فوق بعض يكتب بعدها العمليات التي يود المبرمج إجراءها داخل الدالة. يمكن هذا التركيب من كتابة الدالة بدون اسم فيطلق عليها احياناً الدالة الغامضة anonymous function ويمكن ايضاً ان يسند هذا التركيب لمتغير يشير الى هذه الدالة كما فعلنا في المثال السابق باسناد الدالة التربيعية الى المتغير f. ويتم تنفيذ الدالة المختصرة بنفس الطريقة التقليدية التي تعلمناها سابقاً بأن توضع المدخلات بين قوسين بعد اسم المتغير الذي يشير الى الدالة المختصرة.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee8c847b",
+   "metadata": {},
+   "source": [
+    "ويمكن التأكد من أن المتغير f أصبح يشير الى دالة باستخدام الدالة type كما هو موضح في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "80f447cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bd7f17d",
+   "metadata": {},
+   "source": [
+    "لاستخدام أكثر من مدخل في الدالة المختصرة يفصل بين المدخلات بفاصلة كما تعلمنا سابقاً كما هو موضح في المثال التالي:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "823597ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=lambda x,y:x**2+y**2\n",
+    "f(4,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "229d86d0",
+   "metadata": {},
+   "source": [
+    "لاحظ أن ترتيب المدخلات وقت تنفيذ الدالة مهم كما تعلمنا سابقاً مع الدوال التقليدية."
    ]
   },
   {
